# network-communication

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  name-geo4.avif  pyproject.toml
.github/workflows/: ci.yml  pages.yml
assets/: README.md
assets/media/: demo-commands.md
demos/: README.md
docs/: architecture.md  demo-capture-guide.md  project-index.md  repo-migration-map.md
projects/checksum-lab/: README.md  cli.py
projects/tcp-crc/: README.md  client.py  server.py
projects/tcp-even-parity/: README.md  client.py  server.py
projects/udp-chat/: README.md  client.py  server.py
projects/udp-echo/: README.md  client.py  server.py
site/: README.md  index.html  scripts.js  styles.css
site/projects/: checksum-lab.html  tcp-crc.html  tcp-even-parity.html  udp-chat.html  udp-echo.html
tests/: test_algorithms.py
